<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAgenda">

    <TextView
        android:id="@+id/textViewNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPhoneEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="@+id/textViewNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameEdit" />

    <EditText
        android:id="@+id/editTextPhoneEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPhoneEdit"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextNameEdit"
        app:layout_constraintStart_toStartOf="@+id/editTextTextNameEdit"
        app:layout_constraintTop_toTopOf="@+id/textViewPhoneEdit"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextNameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNameEdit"
        app:layout_constraintStart_toEndOf="@+id/textViewNameEdit"
        app:layout_constraintTop_toTopOf="@+id/textViewNameEdit"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonSaveEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="404dp"
        android:onClick="saveEditClicked"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneEdit" />

    <TextView
        android:id="@+id/textViewEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/endereco"
        app:layout_constraintStart_toStartOf="@+id/textViewNameEdit"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhoneEdit" />

    <EditText
        android:id="@+id/editTextEnderecoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_endereco"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEndereco"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextNameEdit"
        app:layout_constraintStart_toStartOf="@+id/editTextTextNameEdit"
        app:layout_constraintTop_toTopOf="@+id/textViewEndereco"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>